--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@
 }
 .marquee-section-two{
     padding: 20px 0;
-    background-color: #adfe19;
+    background-color: #79170F;
 }
 .team-bg-two{
     padding: 130px 0;
@@ -282,7 +282,7 @@
     padding: 120px 0px 75px 0px;
 }
 .marquee-bg-three{
-    background-color: #adfe19;
+    background-color: #79170F;
 }
 .classes-timetable-section{
     padding: 100px 0px 130px 0px;
@@ -1384,7 +1384,7 @@ span.pbmit-comment-date {
     padding: 60px;
 }
 .contact-section .contact-form h4 {
-    color: #ADFE19;
+    color: #79170F;
     font-size: 30px;
     font-weight: 500;
 }
