[ADD] images in uppsala. [MOD] color background; vel marquee; integrantes descendant

--- a/css/base.css
+++ b/css/base.css
@@ -21,7 +21,7 @@ INDEX:
      --pbmit-secondary-color: #080517;
      --pbmit-light-color: #f8f8f8;
      --pbmit-white-color: #ffffff;
-     --pbmit-blackish-color: #0c0920;
+     --pbmit-blackish-color: #000000;
      --pbmit-link-color-normal: #ffffff;
      --pbmit-link-color-hover: #f80000;
      --pbmit-global-color-rgb: rgb(248, 0, 0);
